--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.5.2"
+    "react-hot-toast": "^2.5.2",
+    "use-debounce": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
